--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
+                            <p class="contador-digito-numero" id="meses0">4</p>
+                            <p class="contador-digito-texto">meses</p>
+                        </div>
+                        <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0">7</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
